<resources>
    <string name="app_name">UmbraSportiva</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync data periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="action_settings">Settings</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="weight">Greutate</string>
    <string name="weight_summary">Greutatea la instalarea aplicației</string>
    <string name="nickname_summary">Numele contului (fără spații)</string>
    <string name="email_summary">Adresa de e-mail a contului</string>
    <string name="password_summary">Parola contului</string>
    <string name="server_summary">URL-ul serverului de sincronizare</string>

    <string name="weight_dialog_title">Greutatea (kg)</string>

    <string name="profile">Date personale</string>

    <string name="email">Adresa email</string>
    <string name="password">Parola</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="sync_data">Sincronizează datele</string>

    <string name="history">Istoric</string>
    <string name="start">Pornește</string>
    <string name="image">Imagine</string>

    <string name="nickname">Nickname</string>

    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="skating">Skating</string>
    <string name="walking">Walking</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="title_stats">Statistics</string>
    <string name="title_map">Map</string>

</resources>