<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile">

        <EditTextPreference
            app:key="nickname"
            app:title="@string/nickname"
            android:summary="@string/weight_summary"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:dialogTitle="@string/weight_dialog_title"
            android:inputType="number"
            android:key="pref_query_limit"
            android:summary="@string/weight_summary"
            app:useSimpleSummaryProvider="true"
            android:title="@string/weight" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync_data"
            app:title="@string/sync_title" />

        <EditTextPreference
            app:key="email"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true"
            android:summary="@string/email_summary" />

        <EditTextPreference
            android:key="password"
            android:title="@string/password"
            android:summary="@string/password_summary"
            app:useSimpleSummaryProvider="true"
            android:inputType="textPassword" />

        <EditTextPreference
            app:key="server"
            app:title="@string/server"
            app:useSimpleSummaryProvider="true"
            android:summary="@string/server_summary" />

    </PreferenceCategory>

</PreferenceScreen>